<resources>
    <string name="app_name">Bibit Mobile App Challenge</string>
    <string name="atau">Atau</string>
    <string name="username_or_email">Username Or Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">234802271711785</string>
    <string name="fb_login_protocol_scheme">fb234802271711785</string>
    <string name="stockbit">Stockbit</string>
    <string name="masuk">Masuk</string>
    <string name="retry">Retry</string>
    <string name="error_text">Error Text</string>
</resources>