<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.login.view.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="1dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/masuk"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp" />


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebook_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="32dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="2"
                            android:background="#999999" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/atau" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_weight="2"
                            android:background="#999999" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_or_email"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="16dp"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="16dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/lupa_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_by_email_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        style="@style/loginButton"
                        android:minHeight="0dp"
                        android:paddingVertical="12dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="#FFf" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_by_fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:minHeight="0dp"
                        style="@style/registerFingerprint"
                        android:paddingVertical="12dp"
                        android:text="@string/masuk_dengan_fingerprint"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Belum Punya Akun? "
                            android:textColor="#000"
                            android:textSize="10sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Daftar Sekarang"
                            android:textColor="@color/colorPrimary"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>



</FrameLayout>